<resources>
    <string name="app_name">gallery</string>
    <string name="webant_logo">webant_logo</string>
    <string name="welcome">Welcome!</string>
    <string name="create_an_account">Create an account</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <!-- Sing up&in strings -->
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_login_or_password">Forgot login or password?</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="username2">User Name<font color='#FF0000'>*</font></string>
    <string name="birthday">Birthday</string>
    <string name="email2">Email<font color='#FF0000'>*</font></string>
    <string name="password2">Password<font color='#FF0000'>*</font></string>
    <string name="confirm_password2">Confirm Password<font color='#FF0000'>*</font></string>
    <!-- Errors strings -->
    <string name="passwords_doesnt_match">Пароли не совпадают</string>
    <string name="user_doesnt_exist">Пользователя с такой почтой не существует</string>
    <string name="user_already_exist">Пользователь с такой почтой уже существует</string>
    <string name="editText_cant_be_empty">Поле не должно быть пустым</string>
    <string name="email_is_wrong">E-mail введен некорректно</string>



    <!--Add Photo Strings -->
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="description">Description</string>

    <string name="loading">Loading…</string>
    <string name="there_is_no_pictures_n_pleace_come_back_later">There is no pictures.\n Pleace come back later.</string>
    <string name="sorry">Sorry!</string>
    <string name="new_and_popular">New and Popular</string>
    <string name="search">Search</string>

    <string name="_20_20_2020">20.20.2020</string>
    <string name="user_name">User Name</string>
    <string name="views_999"><b>Views: </b> <font color='#5F5F5F'>999+</font></string>
    <string name="loaded"><b>Loaded: </b> <font color='#5F5F5F'>999+</font></string>
</resources>