<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scene_root"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/webant_logo"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/welcome"
        android:textSize="@dimen/header_welcome_size"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corners_black"
        android:contextClickable="true"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/button_welcome_size"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:contextClickable="true"
        android:text="@string/i_already_have_an_account"
        android:background="@drawable/rounded_corners_white_with_border"
        android:textSize="@dimen/button_welcome_size"
        android:textStyle="bold"
        android:textAllCaps="false"
        />

</LinearLayout>