<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_cancel"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="1dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_guideline">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/regular_text_size_for_auth"
            android:text="@string/cancel"/>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view_gray_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toTopOf="@id/tv_sign_in"
        app:layout_constraintTop_toBottomOf="@id/toolbar_cancel" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/toolbar_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_guideline"
        android:text="@string/sign_in"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/Header"
        />

    <View
        android:id="@+id/view_guideline"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/pink"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/tl_email"
        app:layout_constraintEnd_toEndOf="@id/tv_sign_in"
        app:layout_constraintStart_toStartOf="@id/tv_sign_in"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="6dp"
        style="@style/TextInputLayoutWithError"
        app:layout_constraintBottom_toTopOf="@id/tl_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/mail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            style="@style/TextInputEditText"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        style="@style/TextInputLayoutWithError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/tv_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:passwordToggleDrawable="@drawable/eye"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_login_or_password"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/button_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_black"
        android:text="@string/sign_in"
        style="@style/ButtonPrimary"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/button_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        style="@style/ButtonSecondary"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_sign_in"/>


</androidx.constraintlayout.widget.ConstraintLayout>