<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_cancel"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="1dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_line">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/regular_text_size_for_auth"
            android:text="@string/cancel"/>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view_border"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/toolbar_cancel"
        app:layout_constraintBottom_toTopOf="@id/tv_sign_up"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/toolbar_cancel"
        app:layout_constraintBottom_toTopOf="@id/view_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_up"
        style="@style/Header"
        />

    <View
        android:id="@+id/view_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/pink"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toTopOf="@id/tl_username"
        app:layout_constraintStart_toStartOf="@id/tv_sign_up"
        app:layout_constraintEnd_toEndOf="@id/tv_sign_up"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextInputLayoutWithError"
        app:cursorColor="@color/pink"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line"
        app:layout_constraintBottom_toTopOf="@id/tl_birthday">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputEditText"
            android:hint="@string/username2"
            android:inputType="textPersonName"
            android:drawableEnd="@drawable/user_outline"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_birthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextInputLayoutWithoutError"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_username"
        app:layout_constraintBottom_toTopOf="@id/tl_email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            style="@style/TextInputEditText"
            android:inputType="date"
            android:hint="@string/birthday"
            android:drawableEnd="@drawable/cil_calendar"
            app:layout_constraintTop_toBottomOf="@id/tl_username"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInputLayoutWithError"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_birthday"
        app:layout_constraintBottom_toTopOf="@id/tl_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputEditText"
            android:inputType="textEmailAddress"
            android:hint="@string/email2"
            android:drawableEnd="@drawable/mail"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/eye"
        style="@style/TextInputLayoutWithError"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_email"
        app:layout_constraintBottom_toTopOf="@id/tl_confirm_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password2"
            style="@style/TextInputEditText"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:passwordToggleDrawable="@drawable/eye"
        style="@style/TextInputLayoutWithError"
        app:passwordToggleEnabled="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_password"
        app:layout_constraintBottom_toTopOf="@id/button_sign_up">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password2"
            style="@style/TextInputEditText"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_black"
        style="@style/ButtonPrimary"
        android:text="@string/sign_up"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_confirm_password"
        app:layout_constraintBottom_toTopOf="@id/button_sign_in"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/sign_in"
        style="@style/ButtonSecondary"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_sign_up"
        />

</androidx.constraintlayout.widget.ConstraintLayout>